<resources>
    <string name="app_name">Diabetes Tracker</string>
    <string name="add_notes_here">Add Notes here</string>
    <string name="notes">Notes</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="sugar_concentration">Sugar Concentration</string>
    <string name="mmo_l">mmo/L</string>
    <string name="tag">Tag</string>
    <string name="systolic_pressure">Systolic Pressure</string>
    <string name="diastolic_pressure">Diastolic Pressure</string>
    <string name="mm_hg">mm Hg</string>
    <string name="pulse">pulse</string>
    <string name="measured_arm">Measured Arm</string>
    <string name="unit_of_measure">Unit of Measure</string>
    <string name="medication">Medication</string>
    <string name="weight">Weight</string>
    <string name="kg">Kg</string>
    <string name="dosage">Dosage</string>
    <string name="per">%</string>
    <string name="measurement_type">Measurement Type</string>
    <string name="mg">mg</string>
    <string name="slot_note">Sorry!! no slots available at the moment</string>
    <string name="measured">Measured</string>
    <string name="systolic">systolic</string>
    <string name="enter_message_here">enter message here</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send">send</string>
    <string name="taken_slots">Taken Slots</string>
    <string name="patient_analysis">Patient Analysis</string>
</resources>
